service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firstapp
  namespace: first-homework
spec:
  selector:
      app: firstapp
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8080
