ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firstapp-ingress
  namespace: first-homework
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp(/|$)(.*/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: firstapp
            port:
              number: 8000
      - path: /()()(health)
        pathType: Exact
        backend:
          service:
            name: firstapp
            port:
              number: 8000
